--- a/index.html
+++ b/index.html
@@ -103,23 +103,38 @@
     <main class="max-w-[82%] mx-auto">
       <!-- Let's discuss -->
       <section class="mt-14">
-        <div class="text-center my-12 max-w-[50%] mx-auto">     
+        <div class="text-center my-12 max-w-[80%] lg:max-w-[50%] mx-auto">     
           <h1 class="text-3xl font-bold">Let's Discuss</h1>
           <p>Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined </p>
         </div>
 
-        <div class="flex flex-1 gap-8">
+        <div class="flex flex-col lg:flex-row gap-8">
           <div id="post-container">
      
           </div>
 
-          <div class=" bg-[#797DFC1A] p-4 rounded-2xl w-[40%]">
+          <div class=" bg-[#797DFC1A] shadow-xl p-4 rounded-2xl w-full lg:w-[40%]">
             <div class="flex justify-between">
               <h1 class="font-semibold">Title</h1>
-              <p><i class="fa-solid fa-check-double text-green-500 mx-1"></i>Mark as read (<span>4</span>)</p>
+              <p><i class="fa-solid fa-check-double text-green-500 mx-1"></i>Mark as read (<span id="total-read">0</span>)</p>
             </div>
             <div  id="post-summary">
             
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Join forum -->
+
+      <section class="my-14">
+        <div class="hero min-h-[96] bg-[#12132D] rounded-3xl p-10">
+          <div class="hero-content flex-col lg:flex-row-reverse">
+            <img src="./images/joinforum.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <div>
+              <h1 class="text-5xl font-bold text-white">Join Our Forum</h1>
+              <p class="py-6 text-white">Share your favorite opinion and win and wp forum coffee mug! Yes, you can run unit tests and view the results directly within the app.</p>
+              <button class="btn bg-[#797DFC] text-white rounded-full border-0 w-40">Register Now</button>
             </div>
           </div>
         </div>
