--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     </header>
 
     <main class="max-w-[82%] mx-auto">
+
       <!-- Let's discuss -->
       <section class="mt-14">
         <div class="text-center my-12 max-w-[80%] lg:max-w-[50%] mx-auto">     
@@ -130,13 +131,24 @@
       <section class="my-14">
         <div class="hero min-h-[96] bg-[#12132D] rounded-3xl p-10">
           <div class="hero-content flex-col lg:flex-row-reverse">
-            <img src="./images/joinforum.png" class="max-w-sm rounded-lg shadow-2xl" />
-            <div>
-              <h1 class="text-5xl font-bold text-white">Join Our Forum</h1>
-              <p class="py-6 text-white">Share your favorite opinion and win and wp forum coffee mug! Yes, you can run unit tests and view the results directly within the app.</p>
+            <img src="./images/joinforum.png" class="w-auto lg:max-w-sm" />
+            <div class="text-center lg:text-start">
+              <h1 class="text-4xl lg:text-5xl font-bold text-white">Join Our Forum</h1>
+              <p class="text-sm lg:text-md py-6 text-white">Share your favorite opinion and win and wp forum coffee mug! Yes, you can run unit tests and view the results directly within the app.</p>
               <button class="btn bg-[#797DFC] text-white rounded-full border-0 w-40">Register Now</button>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="text-center my-12 max-w-[80%] lg:max-w-[50%] mx-auto">     
+          <h1 class="text-3xl font-bold">Latest Posts</h1>
+          <p>Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+        </div>
+
+        <div id="card-container" class="flex gap-4 justify-between">
+         
         </div>
       </section>
       
