--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <header class="max-w-[82%] mx-auto">
       <!-- Navbar -->
-        <div class="navbar bg-base-100 px-0 py-4">
+        <div class="navbar bg-base-100 px-0 py-8">
             <div class="navbar-start">
               <div class="dropdown">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden ps-0">
@@ -48,10 +48,10 @@
             </div>
             <div class="navbar-end  lg:flex">
               <ul class="menu menu-horizontal px-1 hidden lg:flex">
-                <li title="Home"><a class="p-2"><img class="w-full" src="./images/icons/Frame 2.png" alt=""></a></li>
-                <li title="Write Blog"><a class="p-2"><img class="w-full" src="./images/icons/Frame 3.png" alt=""></a></li>
-                <li title="Add Member"><a class="p-2"><img class="w-full" src="./images/icons/Frame 4.png" alt=""></a></li>
-                <li title="Add Tag"><a class="p-2"><img class="w-full" src="./images/icons/Frame 5.png" alt=""></a></li>
+                <li class="tooltip w-14" data-tip="Home"><a class="p-2"><img class="w-full" src="./images/icons/Frame 2.png" alt=""></a></li>
+                <li class="tooltip w-14" data-tip="Write Blog"><a class="p-2"><img class="w-full" src="./images/icons/Frame 3.png" alt=""></a></li>
+                <li class="tooltip w-14" data-tip="Add Member"><a class="p-2"><img class="w-full" src="./images/icons/Frame 4.png" alt=""></a></li>
+                <li class="tooltip w-14" data-tip="Add Tag"><a class="p-2"><img class="w-full" src="./images/icons/Frame 5.png" alt=""></a></li>
               </ul>
 
               <div>
@@ -188,7 +188,9 @@
             <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
             <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
           </div>
-          <hr>
+          <div class="w-full">
+            <div class="divider divider-grey-800"></div>
+          </div>
           <p>Copyright © 2024 - All right reserved</p>
         </nav>
       </footer>
